@@ -407,7 +407,7 @@ bnflog_i(GEN bnf, GEN ell)
       /* a in subgroup generated by S = Rell; hence b integral */
       b = hnf_invimage(Rell, a);
       b = vecmodii(ZM_ZC_mul(Uell, ZC_neg(b)), ordS);
-      A = mkvec2(A, cgetg(1,t_MAT));
+      A = mkvec2(A, trivial_fact());
       A = idealpowred(nf, A, d);
       /* find a principal representative of A_i^cycA_i up to elements of S */
       a = isprincipalfact(bnf,gel(A,1),S,b,nf_GENMAT|nf_FORCE);
