@@ -180,6 +180,7 @@
 [0 0 1]
 
 [[1, 0, 0; 0, 1, 0; 0, 0, 1], Mat([2, 1])]
+[[1, 0, 0; 0, 1, 0; 0, 0, 1], Mat([2, 1])]
 
 [[67452192952521724999, [-16711321285323715217, 1]~, 1, 1, [1671132128532371
 5218, -1; 1, 16711321285323715217]] 1]
@@ -259,4 +260,7 @@
 [-1/18, -1/9, 0, 0, 0, 0]~
 1
 [0, -2, 2, 1, -1, 0]~
-Total time spent: 76
+  ***   at top-level: idealred(nf,[2,Mat(1)])
+  ***                 ^-----------------------
+  *** idealred: incorrect type in idealtyp [extended ideal] (t_VEC).
+Total time spent: 172
